Revision: Improve compatibility with weird Java environments